Improve history page animations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -9,5 +9,6 @@
   "organisation": "Organisation",
   "phone": "Phone",
   "newScan": "New scan",
-  "qrCodeText": "QR code text"
+  "qrCodeText": "QR code text",
+  "businessCardDetails": "Business card details"
 }
